# whisperfish

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  _service  be.rubdos.harbour-whisperfish.service  build.rs  coverage.sh  create-database.sh  deny.toml  diesel-patcher.sh  diesel.toml  dotenv.example  fetch-release-from-gitlab.sh  fetch-webrtc.sh  harbour-whisperfish-call.conf  harbour-whisperfish-helper.desktop  harbour-whisperfish-message-quiet.conf  harbour-whisperfish-message.conf  harbour-whisperfish.desktop  harbour-whisperfish.pro  harbour-whisperfish.profile  harbour-whisperfish.service  query-analysis.py  run.sh  update-translations.sh
.cargo/: vendor.toml
.ci/: build-for-target.sh  build-shareplugin.sh  build-with-mb2.sh  check-translations.sh  unpack-vendor.sh  update-translation-contributors.sh  upload-rpms.sh
.rpm/: harbour-whisperfish.spec
create-store/: Cargo.toml
create-store/src/: main.rs
doc/: building-from-source.md  dev-env-hacks.md  profiling-and-debugging.md  rescue-instructions.rst  rust-1.72.md  rust-1.75.md  rust-repository.md  tips-and-tricks.md
fetch-signal-attachment/: Cargo.toml
fetch-signal-attachment/src/: main.rs
harbour-whisperfish/: Cargo.toml
harbour-whisperfish/src/: main.rs
migrations/2020-11-15-143514_correct-datatypes/: up.sql
migrations/2023-08-28-132147_stories/: up.sql
migrations/2023-08-30-084935_distribution-list/: up.sql
migrations/2023-08-30-124532_story-send/: up.sql
migrations/2023-09-01-115006_server-guid/: up.sql
migrations/2023-12-10-230415_add_messages_delete_after_index/: down.sql  up.sql
migrations/2024-01-04-150414_service-identity-prekey/: up.sql
migrations/2024-01-05-182913_service-identity-misc/: up.sql
migrations/2024-01-12-210029_body-ranges/: up.sql
migrations/2024-01-18-154900_message-editing/: up.sql
migrations/2024-01-19-234352_create_index_for_edited_messages/: up.sql
migrations/2024-01-30-154946_last-resort-kyber/: up.sql
migrations/2024-02-07-154513_index-latest-message/: down.sql  up.sql
migrations/2024-02-07-183018_index-pending-messages/: down.sql  up.sql
migrations/2024-02-07-183627_revision-index/: down.sql  up.sql
migrations/2024-02-08-144753_editing-indexes/: down.sql  up.sql
migrations/2024-02-08-170829_reaction-indexes/: down.sql  up.sql
qml/: harbour-whisperfish-main.qml  harbour-whisperfish.qml
rpm/: harbour-whisperfish.spec  whisperfish-launcher.sh
shareplugin_v2/: WhisperfishPluginInfo.cpp
src/: contacts_schema.rs  lib.rs  schema.patch  schema.rs  settings.rs
tests/: migrations.rs  store_message.rs
transferplugin/: WhisperfishTransferPlugin.h
translations/: harbour-whisperfish-be.ts  harbour-whisperfish-ca.ts  harbour-whisperfish-cs.ts  harbour-whisperfish-da.ts  harbour-whisperfish-de.ts  harbour-whisperfish-el.ts  harbour-whisperfish-es.ts  harbour-whisperfish-eu.ts  harbour-whisperfish-fi.ts  harbour-whisperfish-fr.ts  harbour-whisperfish-hu.ts  harbour-whisperfish-it.ts  harbour-whisperfish-lt.ts  harbour-whisperfish-nb_NO.ts  harbour-whisperfish-nl.ts  harbour-whisperfish-nl_BE.ts  harbour-whisperfish-pl.ts  harbour-whisperfish-pt_BR.ts  harbour-whisperfish-pt_PT.ts  harbour-whisperfish-ro.ts  harbour-whisperfish-ru.ts  harbour-whisperfish-sl.ts  harbour-whisperfish-sv.ts  harbour-whisperfish-ta.ts  harbour-whisperfish-tr.ts  harbour-whisperfish-uk.ts  harbour-whisperfish-zh_CN.ts  harbour-whisperfish.ts
whisperfish/: Cargo.toml  build.rs
whisperfish-migration-dry-run/: Cargo.toml
whisperfish-model-macro/: Cargo.toml
whisperfish-store/: Cargo.toml  build.rs
whisperfish-store/benches/: storage.rs
whisperfish-store/benches/common/: mod.rs
whisperfish-store/protobuf/: Database.proto
whisperfish-store/src/: lib.rs  schema.patch  schema.rs  store.rs
whisperfish-store/src/config/: signalconfig.rs
whisperfish-store/src/schema/: protocol.patch  protocol.rs
whisperfish-store/src/schema/migrations/: original.rs
whisperfish-store/src/store/: body_ranges.rs  calls.rs  encryption.rs  instrumentation.rs  observer.rs  orm.rs  protocol_store.rs  protos.rs  recipient_merge.rs  utils.rs
whisperfish-store/src/store/migrations/: session_to_db.rs
whisperfish-store/src/store/migrations/session_to_db/: quirk.rs
whisperfish-store/src/store/observer/: diesel.rs  orm_interests.rs  process.rs
whisperfish-store/src/store/orm/: sql_types.rs
whisperfish-store/tests/: go_migrations.rs  protocol_store.rs  recipient_processing.rs  storage_migration.rs  store.rs
whisperfish-store/tests/common/: mod.rs
whisperfish-store/tests/migrations/: orm.rs
whisperfish-store/tests/resources/storage_migration/without-passwords-2024-09-attachment-tilde/: description
whisperfish-store/tests/resources/storage_migration/without-passwords-2024-09-attachment-tilde/db/: harbour-whisperfish.db
whisperfish/src/: gui.rs  lib.rs  methods.rs  model.rs  platform.rs  qblurhashimageprovider.rs  qrustlegraphimageprovider.rs  qtlog.rs  store.rs  worker.rs
whisperfish/src/actor/: message.rs  session.rs
whisperfish/src/actor/message/: methods.rs
whisperfish/src/actor/session/: methods.rs  typing_notifications.rs
whisperfish/src/config/: settings.rs
whisperfish/src/methods/: message.rs  session.rs
whisperfish/src/model/: active_model.rs  attachment.rs  calling.rs  contact.rs  create_conversation.rs  device.rs  group.rs  grouped_reactions.rs  messages.rs  prompt.rs  reactions.rs  receipts.rs  recipient.rs  rustlegraph.rs  sessions.rs  typing.rs  username_lookup.rs  voice_note_recorder.rs
whisperfish/src/worker/: client.rs  message_expiry.rs  profile_refresh.rs  setup.rs  username.rs
whisperfish/src/worker/client/: attachment.rs  call.rs  early_receipt_cache.rs  groupv2.rs  linked_devices.rs  message_expiry.rs  migrations.rs  profile.rs  profile_upload.rs  resize_image.rs  service_error_ext.rs  unidentified.rs  voice_note_transcription.rs
whisperfish/src/worker/client/call/: call_manager.rs
whisperfish/src/worker/client/migrations/: account_entropy_pool.rs  groupv2.rs  master_key.rs  parse_reactions.rs  pni.rs  whoami.rs
(+101 files in other folders)
