[workspace]
resolver = "2"
members = [
    "create-store",
    "fetch-signal-attachment",
    "harbour-whisperfish",
    "whisperfish",
    "whisperfish-store",
    "whisperfish-migration-dry-run",
]

[patch.crates-io]
# Required for libsignal's lizard2 patches to c25519
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.0.0' }

# [patch."https://github.com/whisperfish/libsignal-service-rs"]
# libsignal-service = { path = "../libsignal-service-rs/libsignal-service" }
# libsignal-service-hyper = { path = "../libsignal-service-rs/libsignal-service-hyper" }

# Smart dev mode: Compile most stuff in release mode, except for the things
# that are actually maintained by our community
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.libsignal-protocol]
opt-level = 0

[profile.dev.package.libsignal-service]
opt-level = 0

[profile.dev.package.libsignal-service-hyper]
opt-level = 0

[profile.dev.package.qmetaobject]
opt-level = 0

[profile.release]
# This flag is set in CI using CARGO_PROFILE_RELEASE_LTO=thin
# lto = "thin"
debug = true
