[workspace]
resolver = "2"
members = [
    "harbour-whisperfish",
    "whisperfish",
    "whisperfish-store",
    "whisperfish-model-macro",
]

[patch.crates-io]
# Required for libsignal's lizard2 patches to c25519
curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
qttypes = { git = 'https://github.com/woboq/qmetaobject-rs', commit = '728220c0035ca6c85a99ce2fe5db8bb654ce5492' }
qmetaobject = { git = 'https://github.com/woboq/qmetaobject-rs', commit = '728220c0035ca6c85a99ce2fe5db8bb654ce5492' }

# diesel = { git = "https://github.com/diesel-rs/diesel" }

# [patch."https://github.com/whisperfish/libsignal-service-rs"]
# libsignal-service = { path = "../libsignal-service-rs/libsignal-service" }
# libsignal-service-hyper = { path = "../libsignal-service-rs/libsignal-service-hyper" }

[patch."https://github.com/signalapp/libsignal/"]
# Signal's ringrtc depends on zkgroup, but they don't really bother bumping the tag.
# https://github.com/signalapp/ringrtc/issues/55
# This patch section aligns the versions.

# The source and target refs are the same URL. If we add another / in there,
# cargo sees this as a valid patch.  Very ugly workaround.
# https://github.com/rust-lang/cargo/issues/5478#issuecomment-1055365283
zkgroup = { git = "https://github.com/signalapp//libsignal", tag = "v0.56.1" }
libsignal-core = { git = "https://github.com/signalapp//libsignal", tag = "v0.56.1" }
signal-crypto = { git = "https://github.com/signalapp//libsignal", tag = "v0.56.1" }

# Smart dev mode: Compile most stuff in release mode, except for the things
# that are actually maintained by our community
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.libsignal-protocol]
opt-level = 0

[profile.dev.package.libsignal-service]
opt-level = 0

[profile.dev.package.libsignal-service-hyper]
opt-level = 0

[profile.dev.package.qmetaobject]
opt-level = 0

[profile.release]
# This flag is set in CI using CARGO_PROFILE_RELEASE_LTO=thin
# lto = "thin"
debug = true
