cargo-features = ["strip"]

[package]
name = "create-store"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "An utility for whisperfish, mainly used to test storage"

[dependencies]
whisperfish = { path = "../whisperfish" }
rand = "0.8"
structopt = "0.3"
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
actix-rt = "2.8.0"
anyhow = "1.0"
env_logger = "0.9"
uuid = { version = "1.3", features=["v4"] }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.32.0", optional = true }
