[package]
name = "create-store"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "An utility for whisperfish, mainly used to test storage"

[dependencies]
whisperfish = { path = "../whisperfish" }
rand = "0.8"
clap = { version = "3.2", features = ["derive"] }
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "handle-pni-uuid" }
actix-rt = "2.8.0"
anyhow = "1.0"
uuid = { version = "1.5", features = ["v4"] }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.51.0", optional = true }
