[package]
name = "fetch-signal-attachment"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "An utility for whisperfish to fetch Signal attachments"

[dependencies]
whisperfish = { path = "../whisperfish" }
futures = "0.3"
libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
libsignal-service-hyper = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main" }
clap = { version = "3.2", features = ["derive"] }
mime_classifier = "0.0.1"
tracing = "0.1"
anyhow = "1.0"
actix-rt = "2.8.0"
hex = "0.4"
mime = "0.3.17"
uuid = { version = "1.5", features = ["v4"] }

[features]
bundled-sqlcipher = ["whisperfish/bundled-sqlcipher"]
sailfish = ["whisperfish/sailfish"]
harbour = ["whisperfish/harbour"]
