[package]
name = "harbour-whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Private messaging using Signal for SailfishOS."

[dependencies]
whisperfish = { path = "../whisperfish" }
dbus = "0.9"
single-instance = "0.3.3"
tracing = { version = "0.1", features = ["log"] }
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = "0.3.37"
anyhow = "1.0"
clap = { version = "4.5", default-features = false, features = ["std", "help", "usage", "derive"] }
chrono = "0.4"
regex = "1.11"
signal-hook = "0.3.17"

# Profiling and debugging
console-subscriber = { version = "0.4", optional = true }
tracing-tracy = { version = "0.11", optional = true }
tracing-coz = { version = "0.1.1", optional = true }
tracing-flame = { version = "0.2", optional = true }

[features]
bundled-sqlcipher = ["whisperfish/bundled-sqlcipher"]
sailfish = ["whisperfish/sailfish"]
harbour = ["whisperfish/harbour"]
calling = ["whisperfish/calling"]
console-subscriber = ["dep:console-subscriber"]
tracy = ["dep:tracing-tracy"]
coz = ["dep:tracing-coz"]
flame = ["dep:tracing-flame"]

diesel-instrumentation = ["whisperfish/diesel-instrumentation"]
