[package]
name = "whisperfish-store"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Private messaging using Signal for SailfishOS -- core."

[[bench]]
name = "storage"
harness = false

[dependencies]
actix = "0.13"
aes = "0.8"
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.2.1"
cbc = "0.1"
cipher = "0.4"
chrono = "0.4"
diesel = { version = "2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0"
diesel-derive-enum = { version = "2.1.0", features = ["sqlite"] }
dirs = "5.0"
fs_extra = "1.2.0"
hex = "0.4"
hmac = "0.12"
itertools = "0.11"
libsqlite3-sys = { version = "0.27", features = ["sqlcipher"] }
pbkdf2 = { version = "0.12", default-features = false }
phonenumber = "0.3.1"
prost = "0.12"
rand = "0.8"
regex = "1.7"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] }
secrecy = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
sha2 = "0.10"
sha-1 = "0.10"
tempfile = { version = "3.4.0", default-features = false }
tokio = { version = "1.26.0", features = ["fs", "macros"] }
uuid = { version = "1.5", features=["v4"] }
linkify = "0.10"

tracing = "0.1"

libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main", features = ["unsend-futures"] }

[build-dependencies]
anyhow = "1.0"
prost-build = "0.12"

[dev-dependencies]
actix-rt = "2.8.0"
# Git version for async tests. 0.6.5 will contain this feature,
# so revert to crates.io on release
criterion = "0.5"
futures = "0.3"
rstest = "0.18"
rstest_reuse = "0.6.0"

[features]
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher"]
sailfish = ["bundled-sqlcipher", "bundled-openssl"]

bundled-openssl = ["libsqlite3-sys/bundled-sqlcipher-vendored-openssl"]
