[package]
name = "whisperfish-store"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Private messaging using Signal for SailfishOS -- core."

[[bench]]
name = "storage"
harness = false

[dependencies]
aes = "0.8"
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3.3"
cbc = "0.1"
cipher = "0.4"
chrono = "0.4"
diesel = { version = "2.2", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35", "64-column-tables"] }
diesel_migrations = "2.2"
diesel-derive-enum = { version = "2.1", features = ["sqlite"] }
dirs = "6.0"
fs_extra = "1.3.0"
hex = "0.4"
hmac = "0.12"
itertools = "0.14"
libsqlite3-sys = { version = "0.35", features = ["sqlcipher"] }
once_cell = "1.8"
pbkdf2 = { version = "0.12", default-features = false }
phonenumber = "0.3.7"
prost = "0.14"
rand = "0.8"
regex = "1.11"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
sha-1 = "0.10"
tempfile = { version = "3.15.0", default-features = false }
tokio = { version = "1.43.0", features = ["fs", "macros"] }
uuid = { version = "1.12", features = ["v4"] }
linkify = "0.10"
mime = "0.3.17"
mime_guess = "2.0"
mime_classifier = "0.0.1"

tracing = "0.1"

libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "whisperfork" }

[build-dependencies]
anyhow = "1.0"
prost-build = "0.14"

[dev-dependencies]
base64 = "0.22"
# Git version for async tests. 0.6.5 will contain this feature,
# so revert to crates.io on release
criterion = "0.7"
futures = "0.3"
rstest = "0.26"
rstest_reuse = "0.7.0"

[features]
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher"]
sailfish = ["bundled-sqlcipher", "bundled-openssl"]

diesel-instrumentation = []

bundled-openssl = ["libsqlite3-sys/bundled-sqlcipher-vendored-openssl"]
