[package]
name = "whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
build = "build.rs"
license = "AGPL-3.0-or-later"
description = "Private messaging using Signal for SailfishOS -- library."

[dependencies]
actix = "0.13"
rand = "0.8"
uuid = { version = "1.5", features=["v4"] }
mime = "0.3.17"
mime_guess = "2.0"
mime_classifier = "0.0.1"
chrono = "0.4"
tokio = { version = "1.26.0", features=["tracing"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
futures = "0.3"
fs2 = "0.4.3"

blurhash = { git = "https://github.com/whisperfish/blurhash-rs.git", branch = "main" }
percent-encoding = "2.2"

libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main", features=["unsend-futures"] }
libsignal-service-hyper = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "main", features=["unsend-futures"] }

libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.32.0" }
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.32.0" }

proc-macro2 = "1.0"

pbkdf2 = { version = "0.12", default-features = false }
cbc = "0.1"
cipher = "0.4"
once_cell = "1.14.0"
rustls = "0.21"

qttypes = "0.2.9"
qmetaobject = { version = "0.2.9" }
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async.git" }
time = "0.3.30"
scrypt = { version = "0.11.0", default-features = false, features=["std"] }

getrandom = "0.2"

cpp = "0.5"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1"
hex = "0.4"
phonenumber = "0.3.1"
itertools = "0.11"
qrencode = "0.14"
image = { version = "0.24", default-features = false, features=["png"] }

diesel = { version = "2.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0"
libsqlite3-sys = { version = "0.26.0", features = ["sqlcipher"] }

serde = {version = "1.0", features = ["derive"]}

serde_yaml = "0.9"

base64 = "0.21"

tempfile = { version = "3.4.0", default-features = false }

rustlegraph = { git = "https://gitlab.com/whisperfish/rustlegraph", branch = "main" }

regex = "1.7.3"

sailors = { git = "https://gitlab.com/whisperfish/sailo-rs.git", optional = true }
whisperfish-store = { path = "../whisperfish-store" }

# Added directly because of whisperfork feature flag
symphonia = { verion = "0.5", default-features = false }

[build-dependencies]
cmake = "0.1.48"
cpp_build = "0.5"
cc = "1.0"
anyhow = "1.0"

[dev-dependencies]
actix-rt = "2.8.0"
criterion = "0.5"
rstest = "0.18"
rstest_reuse = "0.6.0"

[features]
bundled-sqlcipher = ["libsqlite3-sys/bundled-sqlcipher", "whisperfish-store/bundled-sqlcipher"]
sailfish = ["bundled-sqlcipher", "bundled-openssl", "sailors", "whisperfish-store/sailfish"]
harbour = ["sailfish"]

bundled-openssl = ["libsqlite3-sys/bundled-sqlcipher-vendored-openssl", "whisperfish-store/bundled-openssl"]
