[package]
name = "whisperfish"
version = "0.6.0-dev"
authors = ["Ruben De Smet <ruben.de.smet@rubdos.be>"]
edition = "2018"
build = "build.rs"
license = "AGPL-3.0-only"
description = "Private messaging using Signal for SailfishOS -- library."

[dependencies]
actix = "0.13"
dbus = "0.9"
dbus-tokio = "0.7"
rand = "0.8"
uuid = { version = "1.12", features = ["v4"] }
mime = "0.3.17"
mime_guess = "2.0"
mime_classifier = "0.0.1"
chrono = "0.4"
tokio = { version = "1.43.0", features = ["tracing"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = "0.3"
futures = "0.3"
fs2 = "0.4.3"

blurhash = "0.2.3"
percent-encoding = "2.3"

libsignal-service = { git = "https://github.com/whisperfish/libsignal-service-rs", branch = "whisperfork" }

libsignal-protocol = { git = "https://github.com/signalapp/libsignal", tag = "v0.56.1" }
zkgroup = { git = "https://github.com/signalapp/libsignal", tag = "v0.56.1" }

proc-macro2 = "1.0"

pbkdf2 = { version = "0.12", default-features = false }
cbc = "0.1"
cipher = "0.4"
once_cell = "1.20.2"

qmetaobject = "0.2.10"
qttypes = "0.2.12"
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async.git" }
time = "0.3.37"
scrypt = { version = "0.11.0", default-features = false, features = ["std"] }

getrandom = "0.3"

cpp = "0.5"
dirs = "6.0"
anyhow = "1.0"
thiserror = "2"
hex = "0.4"
phonenumber = "0.3.7"
itertools = "0.14"
qrencode = "0.14"
image = { version = "0.24", default-features = false, features = ["png"] }

diesel = { version = "2.2", features = ["sqlite", "chrono"] }
diesel_migrations = "=2.2"
libsqlite3-sys = { version = "0.35", features = ["sqlcipher"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
serde_yaml = "0.9"

base64 = "0.22"

tempfile = { version = "3.15.0", default-features = false }

rustlegraph = { git = "https://gitlab.com/whisperfish/rustlegraph", branch = "main" }

regex = "1.11.1"

gstreamer = "0.24"
glib = "0.21"

ringrtc = { git = "https://github.com/whisperfish/ringrtc", branch = "whisperfork", version = "2.46.2", features = ["native", "system_ssl"], optional = true }

sailors = { git = "https://gitlab.com/whisperfish/sailo-rs.git", optional = true }
whisperfish-store = { path = "../whisperfish-store" }
whisperfish-model-macro = { path = "../whisperfish-model-macro" }

# These are the dependencies for the Whisperfish helper binaries
clap = "3"
rpassword = "7.3"
actix-rt = "2.10"

[build-dependencies]
cmake = "0.1.52"
cpp_build = "0.5"
cc = "1.2"
anyhow = "1.0"
sha2 = { version = "0.10", features = ["force-soft"] }
hex = "0.4"

[dev-dependencies]
actix-rt = "2.10.0"
criterion = "0.7"
rstest = "0.26"
rstest_reuse = "0.7.0"

[features]
bundled-sqlcipher = [
    "libsqlite3-sys/bundled-sqlcipher",
    "whisperfish-store/bundled-sqlcipher",
]
sailfish = [
    "bundled-sqlcipher",
    "bundled-openssl",
    "sailors",
    "whisperfish-store/sailfish",
]
calling = ["ringrtc"]
harbour = ["sailfish"]

bundled-openssl = [
    "libsqlite3-sys/bundled-sqlcipher-vendored-openssl",
    "whisperfish-store/bundled-openssl",
]
diesel-instrumentation = ["whisperfish-store/diesel-instrumentation"]
